--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -145,6 +145,11 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
+                <a href="https://www.saeloun.com/" aria-label="Saeloun">
+                  <img src="/assets/images/logo-saeloun.svg" alt="Saeloun" />
+                </a>
+              </div>
+              <div class="trusted__block">
                 <a href="https://tablecheck.com/en/join" aria-label="TableCheck">
                   <img src="/assets/images/logo-tablecheck-black.svg" alt="TableCheck" style="padding:4px" />
                 </a>
