--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -125,7 +125,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://gusto.com/" aria-label="Gustoa">
+                <a href="https://gusto.com/" aria-label="Gusto">
                   <img src="/assets/images/logo-gusto.svg" alt="Gusto" />
                 </a>
               </div>
@@ -146,7 +146,7 @@ redirect_from:
               </div>
               <div class="trusted__block">
                 <a href="https://www.saeloun.com/" aria-label="Saeloun">
-                  <img src="/assets/images/logo-saeloun.svg" alt="Saeloun" />
+                  <img src="/assets/images/logo-saeloun.png" alt="Saeloun" />
                 </a>
               </div>
               <div class="trusted__block">
