--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -146,7 +146,7 @@ redirect_from:
               </div>
               <div class="trusted__block">
                 <a href="https://www.saeloun.com/" aria-label="Saeloun">
-                  <img src="/assets/images/logo-saeloun-4.svg" alt="Saeloun" />
+                  <img src="/assets/images/logo-saeloun-4.svg" alt="Saeloun" style="padding:8px 0" />
                 </a>
               </div>
               <div class="trusted__block">
