Update foundation.html with logo

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -125,6 +125,11 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
+                <a href="https://www.clio.com/" aria-label="Clio">
+                  <img src="/assets/images/logo-clio.svg" alt="Clio" />
+                </a>
+              </div>
+              <div class="trusted__block">
                 <a href="https://gusto.com/" aria-label="Gusto">
                   <img src="/assets/images/logo-gusto.svg" alt="Gusto" />
                 </a>
