--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -126,7 +126,7 @@ redirect_from:
               </div>
               <div class="trusted__block">
                 <a href="https://www.clio.com/" aria-label="Clio">
-                  <img src="/assets/images/logo-clio.svg" alt="Clio" />
+                  <img src="/assets/images/logo-clio.svg" alt="Clio" style="padding:3px 0" />
                 </a>
               </div>
               <div class="trusted__block">
