Translate the rails doctrine to Portuguese

--- a/doctrine/de.html
+++ b/doctrine/de.html
@@ -42,6 +42,9 @@ redirect_from:
               <a href="/doctrine/fr"><span>Français</span></a>
             </li>
             <li>
+              <a href="/doctrine/pt"><span>Português</span></a>
+            </li>
+            <li>
               <a href="/doctrine/ru"><span>Russian</span></a>
             </li>
             <li>
