--- a/doctrine/es.html
+++ b/doctrine/es.html
@@ -26,6 +26,7 @@ redirect_from:
             <li><a href="/doctrine/de"><span>Deutsch</span></a></li>
             <li><a href="/doctrine"><span>English</span></a></li>
             <li><a href="/doctrine/fr"><span>Français</span></a></li>
+            <li><a href="/doctrine/pt"><span>Português</span></a></li>
             <li><a href="/doctrine/ru"><span>Russian</span></a></li>
             <li><a href="/doctrine/zh_cn"><span>简体中文</span></a></li>
             <li><a href="/doctrine/zh_tw"><span>繁體中文</span></a></li>
