Adding logo to Foundation page

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -135,6 +135,11 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
+                <a href="https://www.higherpixels.com/" aria-label="Higher Pixels">
+                  <img src="/assets/images/logo-higherpixels-BW.svg" alt="Higher Pixels" />
+                </a>
+              </div>
+              <div class="trusted__block">
                 <a href="https://makandra.de/en" aria-label="makandra">
                   <img src="/assets/images/logo-makandra-2.svg" alt="makandra" style="padding: 8px" />
                 </a>
