--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -136,12 +136,12 @@ redirect_from:
               </div>
               <div class="trusted__block">
                 <a href="https://www.higherpixels.com/" aria-label="Higher Pixels">
-                  <img src="/assets/images/logo-higherpixels-BW.svg" alt="Higher Pixels" />
+                  <img src="/assets/images/logo-higherpixels-BW.svg" alt="Higher Pixels" style="filter: none;"/>
                 </a>
               </div>
               <div class="trusted__block">
                 <a href="https://makandra.de/en" aria-label="makandra">
-                  <img src="/assets/images/logo-makandra-2.svg" alt="makandra" style="padding: 8px" />
+                  <img src="/assets/images/logo-makandra-2.svg" alt="makandra" style="padding: 8px" style="filter: none;"/>
                 </a>
               </div>
               <div class="trusted__block">
