Show the new recommendation to require and permit parameters

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ class ArticlesController < ApplicationController
 
   private
     def article_params
-      params.require(:article).permit(:title, :content)
+      params.expect(article: [ :title, :content ])
     end
 end
 {% endhighlight %}
