Linking ready companies from foundation page

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -58,12 +58,12 @@ redirect_from:
           <div class="container">
             <div class="trusted__blocks">
               <div class="trusted__block">
-                <a href="https://cookpad.com" aria-label="Cookpad">
+                <a href="/foundation/cookpad" aria-label="Cookpad">
                   <img src="/assets/images/logo-cookpad.svg" alt="Cookpad" />
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://www.doximity.com" aria-label="Doximity">
+                <a href="/foundation/doximity" aria-label="Doximity">
                   <img src="/assets/images/logo-doximity.svg" alt="Doximity" />
                 </a>
               </div>
@@ -98,7 +98,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://37signals.com/" aria-label="37signals">
+                <a href="/foundation/37signals" aria-label="37signals">
                   <img src="/assets/images/logo-37signals.svg" alt="37signals" />
                 </a>
               </div>
@@ -120,12 +120,12 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://www.cedarcode.com/" aria-label="Cedarcode">
+                <a href="/foundation/cedarcode" aria-label="Cedarcode">
                   <img src="/assets/images/logo-cedarcode.svg" alt="Cedarcode" />
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://www.clio.com/" aria-label="Clio">
+                <a href="/foundation/clio" aria-label="Clio">
                   <img src="/assets/images/logo-clio.svg" alt="Clio" style="padding:3px 0" />
                 </a>
               </div>
@@ -160,7 +160,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://tablecheck.com/en/join" aria-label="TableCheck">
+                <a href="/foundation/tablecheck" aria-label="TableCheck">
                   <img src="/assets/images/logo-tablecheck-black.svg" alt="TableCheck" style="padding:4px" />
                 </a>
               </div>
