--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -140,7 +140,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://makandra.de/en" aria-label="makandra">
+                <a href="/foundation/makandra" aria-label="makandra">
                   <img src="/assets/images/logo-makandra-2.svg" alt="makandra" style="padding: 8px" style="filter: none;"/>
                 </a>
               </div>
