--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -115,7 +115,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://www.bigbinary.com/" aria-label="BigBinary">
+                <a href="/foundation/bigbinary.com" aria-label="BigBinary">
                   <img src="/assets/images/logo-bigbinary.svg" alt="BigBinary" />
                 </a>
               </div>
