--- a/doctrine/zh_tw.html
+++ b/doctrine/zh_tw.html
@@ -30,6 +30,7 @@ redirect_from:
               <li lang="de"><a href="/doctrine/de"><span>Deutsch</span></a></li>
               <li lang="es"><a href="/doctrine/es"><span>Español</span></a></li>
               <li lang="fr"><a href="/doctrine/fr"><span>Français</span></a></li>
+              <li lang="ja"><a href="/doctrine/ja"><span>日本語</span></a></li>
               <li lang="ru"><a href="/doctrine/ru"><span>Russian</span></a></li>
               <li lang="zh-CN"><a href="/doctrine/zh_cn"><span>简体中文</span></a></li>
             </ul>
