update default site title description and index and docs page

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -1,6 +1,6 @@
 ---
-title: Docs
-description:
+title: "Ruby on Rails Documentation"
+description: "The official Rails documentation: installation, getting started,in-depth guides, API reference."
 permalink: /docs
 redirect_from:
   - /docs/
