doximity, community, blog

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -1,6 +1,6 @@
 ---
 title: "Ruby on Rails Documentation"
-description: "The official Rails documentation: installation, getting started,in-depth guides, API reference."
+description: "The official Rails documentation: installation, getting started, in-depth guides, and API reference."
 permalink: /docs
 redirect_from:
   - /docs/
