--- a/_case_studies/doximity.html
+++ b/_case_studies/doximity.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Doximity Case Study - Fast, Flexible, and Scalable
-description: Read how Rails has helped Doximity grow into the largest digital platform for U.S. medical professionals. 
+title: "Ruby on Rails Case Study: Doximity's Scalable Healthcare Platform"
+description: "Read how Rails has helped Doximity grow into the largest digital platform for U.S. medical professionals."
 og_image: assets/images/case-study-doximity.png
 permalink: /docs/case-studies/doximity
 redirect_from:
