foundation, world, etc.

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -1,6 +1,6 @@
 ---
 title: "The Rails Foundation"
-description: "Announcements from the Rails Foundation about the Rails World conference, new members, and other initiatives to grow the Rails ecosystem."
+description: "Learn about the Rails Foundation's mission, current work, members, board, executive director, structure, and budget."
 category: foundation
 permalink: /foundation
 redirect_from:
