--- a/world/index.html
+++ b/world/index.html
@@ -1,6 +1,6 @@
 ---
-title: Rails World
-description: Rails World is an annual two-day, two track Rails community conference
+title: "Rails World Conference"
+description: Rails World is an annual two day Rails community conference, with location across Europe and North America, featuring technical talks, workshops, and keynotes about best practices in Rails development.
 permalink: 
 ---
 
