--- a/_case_studies/doximity.html
+++ b/_case_studies/doximity.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Ruby on Rails Case Study: Doximity's Scalable Healthcare Platform"
+title: "Doximity Case Study — Ruby on Rails"
 description: "Read how Rails has helped Doximity grow into the largest digital platform for U.S. medical professionals."
 og_image: assets/images/case-study-doximity.png
 permalink: /docs/case-studies/doximity
