--- a/world/index.html
+++ b/world/index.html
@@ -26,7 +26,7 @@ permalink:
 
         <h3>Next up.</h3>
 
-        <p><a href="/world/2025">Rails World 2025</a> will take place in Amsterdam, NL September 4 & 5, 2025. Keep an eye on the website or <a href="https://rails-foundation.kit.com/sign-up">sign up to the event mailing list</a> to hear when tickets dates are announced.</p>
+        <p><a href="/world/2025">Rails World 2025</a> will take place in Amsterdam, NL September 4 & 5, 2025, and it is now sold out. Keep an eye on the website or <a href="https://rails-foundation.kit.com/sign-up">sign up to the event mailing list</a> for updates.</p>
 
         <p><img src="/assets/images/RW25-save-the-date.png"></p>
         
