Apply suggestions from Amanda's code review
Co-authored-by: Amanda Perino <58528404+AmandaPerino@users.noreply.github.com>

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -1,6 +1,6 @@
 ---
 title: "Ruby on Rails Documentation"
-description: "The official Rails documentation: installation, getting started, in-depth guides, and API reference."
+description: "The official Rails documentation: installation guide, tutorials, and API reference docs."
 permalink: /docs
 redirect_from:
   - /docs/
