--- a/_pages/security.html
+++ b/_pages/security.html
@@ -1,6 +1,6 @@
 ---
 title: "Security Policy: Rails takes web security very seriously"
-description: "Rails includes features to protect web apps from common issues like CSRF, Script Injection, SQL Injection, and the like."
+description: "Learn how to report security vulnerabilities and receive updates when patches are released."
 permalink: /security
 redirect_from:
   - /security/
