--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -1,6 +1,6 @@
 ---
 title: "The Rails Foundation"
-description: "Learn about the Rails Foundation's mission, current work, members, board, executive director, structure, and budget."
+description: "Learn about the Rails Foundation's mission, current work, members, and how you can support the Rails community."
 category: foundation
 permalink: /foundation
 redirect_from:
