SEO Tasks: Improve SEO Titles & Meta Descriptions (#473)
* update default site title description and index and docs page

* doximity, community, blog

* releases, news, foundation

* foundation, world, etc.

* conduct, security, etc.

* shorter titles

* Apply suggestions from Amanda's code review

Co-authored-by: Amanda Perino <58528404+AmandaPerino@users.noreply.github.com>

---------

Co-authored-by: Amanda Perino <58528404+AmandaPerino@users.noreply.github.com>

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -1,6 +1,6 @@
 ---
-title: The Rails Foundation
-description:
+title: "The Rails Foundation"
+description: "Learn about the Rails Foundation's mission, current work, members, and how you can support the Rails community."
 category: foundation
 permalink: /foundation
 redirect_from:
