Convert h4s to p in heading section on blog, world, community and foundation

--- a/_pages/community.html
+++ b/_pages/community.html
@@ -12,7 +12,7 @@ redirect_from:
       <div class="heading__headline common-headline">
         <h1>We make Rails better.</h1>
 
-        <h4>Rails is improving every year from the work of thousands of volunteers contributing in ways big and small. Everyone can help make this framework better whether they’ve been using it since the beginning or they just started yesterday.</h4>
+        <p>Rails is improving every year from the work of thousands of volunteers contributing in ways big and small. Everyone can help make this framework better whether they’ve been using it since the beginning or they just started yesterday.</p>
       </div>
     </div>
   </div>
