--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -12,7 +12,7 @@ redirect_from:
     <div class="heading__body">
       <div class="heading__headline common-headline">
         <h1>The Rails Foundation.</h1>
-        <h4>A non-profit organization helping our ecosystem prosper.</h4>
+        <p>A non-profit organization helping our ecosystem prosper.</p>
       </div>
     </div>
   </div>
