--- a/world/index.html
+++ b/world/index.html
@@ -9,7 +9,7 @@ permalink:
     <div class="heading__body">
       <div class="heading__headline common-headline">
         <h1>Rails World</h1>
-        <h4>Shaping the future of Ruby on Rails.</h4>
+        <p>Shaping the future of Ruby on Rails.</p>
       </div>
     </div>
   </div>
