--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -211,7 +211,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://www.renuo.ch/" aria-label="Renuo">
+                <a href="/foundation/renuo" aria-label="Renuo">
                   <img src="/assets/images/logo-renuo.svg" alt="Renuo" />
                 </a>
               </div>
