--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -83,6 +83,11 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
+                <a href="https://judge.me/" aria-label="Judge.me">
+                  <img src="/assets/images/logo-judgeme.png" alt="Judge.me" />
+                </a>
+              </div>
+              <div class="trusted__block">
                 <a href="https://www.procore.com/" aria-label="Procore">
                   <img src="/assets/images/logo-procore.svg" alt="Procore" />
                 </a>
