--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -84,7 +84,7 @@ redirect_from:
               </div>
               <div class="trusted__block">
                 <a href="https://judge.me/" aria-label="Judge.me">
-                  <img src="/assets/images/logo-judgeme.png" alt="Judge.me" />
+                  <img src="/assets/images/logo-judgeme-BW.png" alt="Judge.me" style="padding:10px 0"/>
                 </a>
               </div>
               <div class="trusted__block">
