Update foundation.html with Linh Dam

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -189,6 +189,7 @@ redirect_from:
 
         <ul>
           <li><a href="https://www.linkedin.com/in/nbatra/">Neha Batra</a> (VP of Engineering, GitHub)</li>
+          <li><a href="https://www.linkedin.com/in/linh-dam-48a55641/">Linh Dam</a> (Co-Founder and Chief Architect, Judge.me)</li>
           <li><a href="https://www.linkedin.com/in/duncandavidson/">Duncan Davidson</a> (Technical Advisor, Office of the CEO, Shopify)</li>
           <li><a href="https://www.linkedin.com/in/sdavis7766/">Steve Davis</a> (President of Product & Technology, Procore)</li>
           <li><a href="https://www.linkedin.com/in/rosagutierrezescudero/">Rosa Gutiérrez</a> (Lead Programmer, 37signals)</li>
