Fixing “nine” to “ten” for number of core members

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -73,7 +73,7 @@ redirect_from:
 
         <h3>Our Members.</h3>
         <p>
-          In alphabetical order, the nine Core members of the foundation are:
+          In alphabetical order, the ten Core members of the foundation are:
         </p>
         <div class="trusted common-padding--bottom-small">
           <div class="container">
