--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -104,7 +104,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://judge.me/" aria-label="Judge.me">
+                <a href="/foundation/judge_me" aria-label="Judge.me">
                   <img
                     src="/assets/images/logo-judgeme.svg"
                     alt="Judge.me"
