--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -99,7 +99,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://www.intercom.com" aria-label="Intercom">
+                <a href="/foundation/intercom" aria-label="Intercom">
                   <img src="/assets/images/logo-intercom.svg" alt="Intercom" />
                 </a>
               </div>
