Small word change

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -60,8 +60,8 @@ redirect_from:
 
             <div class="card__content">
               <p>
-                Build an app and learn the basics of Rails with a hands-on,
-                step-by-step tutorial.
+                Build an app and learn the basics of Rails with hands-on,
+                step-by-step tutorials.
               </p>
             </div>
           </div>
