--- a/_pages/tutorial.html
+++ b/_pages/tutorial.html
@@ -11,7 +11,7 @@ redirect_from:
     <div class="heading__body">
       <div class="heading__headline common-headline">
         <p class="breadcrumb">
-          <a href="/docs">« Back to the Docs Home</a>
+          <a href="/docs">« Back to Docs</a>
         </p>
         <h1>Tutorials for<br />All Levels</h1>
       </div>
@@ -88,8 +88,8 @@ redirect_from:
 
             <div class="card__content">
               <p>
-                Who do you think you are? The system will know once you add this
-                feature.
+                Allow your users to sign up and edit their profile, and 
+                create admins for your store.
               </p>
             </div>
           </div>
@@ -107,7 +107,7 @@ redirect_from:
 
             <div class="card__content">
               <p>
-                Save this for later, share the list for a birthday or holiday,
+                Save products for later, share the list for a birthday or holiday,
                 and more.
               </p>
             </div>
@@ -129,7 +129,7 @@ redirect_from:
 
             <div class="card__content">
               <p>
-                Allow people to review the products that we sell. Five stars!
+                Allow people to rate and review the products that you sell.
               </p>
             </div>
             <div class="card__label">
@@ -148,10 +148,9 @@ redirect_from:
       <div class="text__content common-content">
         <h2 class="how">More in the Pipeline</h2>
         <p class="how-leadin">
-          We’re constantly expanding this tutorial to provide a robust
-          quick-start to developers looking to get into Rails. Have something
-          you’d like us to cover?
-          <a href="https://github.com/rails/rails/discussions/categories/docs"
+          This tutorial series will expand to add more features so you can learn Rails. 
+          Have something you’d like us to cover?
+          <a href="https://app.todohelpers.com/forms/4758b5b0-d6f9-4f41-8041-992cc9b748fb"
             >Let us know.</a
           >
         </p>
