--- a/doctrine/index.html
+++ b/doctrine/index.html
@@ -24,12 +24,12 @@ redirect_from:
         </label>
         <div class="language__options">
           <ul>
-            <li><a href="/doctrine/de"><span>Deutsch</span></a></li>
-            <li><a href="/doctrine/es"><span>Español</span></a></li>
-            <li><a href="/doctrine/fr"><span>Français</span></a></li>
-            <li><a href="/doctrine/ru"><span>Russian</span></a></li>
-            <li><a href="/doctrine/zh_cn"><span>简体中文</span></a></li>
-            <li><a href="/doctrine/zh_tw"><span>繁體中文</span></a></li>
+            <li lang="de"><a href="/doctrine/de"><span>Deutsch</span></a></li>
+            <li lang="es"><a href="/doctrine/es"><span>Español</span></a></li>
+            <li lang="fr"><a href="/doctrine/fr"><span>Français</span></a></li>
+            <li lang="en"><a href="/doctrine/ru"><span>Russian</span></a></li>
+            <li lang="zh-CN"><a href="/doctrine/zh_cn"><span>简体中文</span></a></li>
+            <li lang="zh-TW"><a href="/doctrine/zh_tw"><span>繁體中文</span></a></li>
           </ul>
         </div>
       </div>
