Added `lang="da"` attribute to David Heinemeier Hansson's name across all doctrine translations for improved accessibility and semantic HTML compliance.

--- a/doctrine/zh_tw.html
+++ b/doctrine/zh_tw.html
@@ -14,7 +14,7 @@ redirect_from:
         </div>
         <div class="heading__content heading__content--has-headline common-content">
           <dl>
-            <dt>David Heinemeier Hansson</dt>
+            <dt lang="da">David Heinemeier Hansson</dt>
             <dd>翻譯 <a href="https://github.com/juanitofatas">Juanito Fatas</a>, <a href="https://github.com/wildjcrt">wildjcrt</a>
             </dd>
           </dl>
