--- a/doctrine/index.html
+++ b/doctrine/index.html
@@ -14,7 +14,7 @@ redirect_from:
       </div>
       <div class="heading__content heading__content--has-headline common-content">
         <dl>
-          <dt>David Heinemeier Hansson</dt>
+          <dt lang="da">David Heinemeier Hansson</dt>
         </dl>
       </div>
       <div class="language">
