--- a/doctrine/ru.html
+++ b/doctrine/ru.html
@@ -14,7 +14,7 @@ redirect_from:
         </div>
         <div class="heading__content heading__content--has-headline common-content">
           <dl>
-            <dt>David Heinemeier Hansson</dt>
+            <dt lang="da">David Heinemeier Hansson</dt>
             <dd>Автор перевода <a href="https://github.com/dmytro-strukov">Dmitriy Strukov</a></dd>
           </dl>
         </div>
