--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ description: "A full-stack web application framework written in Ruby, following 
 <div class="video common-background--grey common-shape--top-white-down-left">
   <div class="container">
     <div class="video__embed">
-      <video poster="https://d2biiyjlsh52uh.cloudfront.net/rails/rails-8-demo.webp" src="https://d2biiyjlsh52uh.cloudfront.net/rails/rails-8-demo.mp4" width="1920" height="1080" preload="metadata" controls crossorigin>
-        <track src="https://d2biiyjlsh52uh.cloudfront.net/rails/rails-8-demo-en.vtt" kind="captions" label="English" srclang="en" default>
+      <video poster="https://videos.37signals.com/rails/rails-8-demo.webp" src="https://videos.37signals.com/rails/rails-8-demo.mp4" width="1920" height="1080" preload="metadata" controls crossorigin>
+        <track src="https://videos.37signals.com/rails/rails-8-demo-en.vtt" kind="captions" label="English" srclang="en" default>
       </video>
     </div>
   </div>
