Update foundation.html with Chime logo

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -173,6 +173,14 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
+                 <a href="https://www.chime.com/" aria-label="Chime">
+                  <img
+                    src="/assets/images/logo-chime.svg"
+                    alt="Chime"
+                  />
+                </a>
+              </div>
+              <div class="trusted__block">
                 <a href="/foundation/clio" aria-label="Clio">
                   <img
                     src="/assets/images/logo-clio.svg"
@@ -187,8 +195,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a
-                  href="https://www.higherpixels.com/"
+                <a href="https://www.higherpixels.com/"
                   aria-label="Higher Pixels"
                 >
                   <img
