Update foundation.html fix Chime logo div

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -175,9 +175,7 @@ redirect_from:
               <div class="trusted__block">
                  <a href="https://www.chime.com/" aria-label="Chime">
                   <img
-                    src="/assets/images/logo-chime.svg"
-                    alt="Chime"
-                  />
+                    src="/assets/images/logo-chime-bw.svg" alt="Chime" style="padding: 7px 0" />
                 </a>
               </div>
               <div class="trusted__block">
