Update foundation.html with new Shopify director

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -297,12 +297,6 @@ redirect_from:
             (Co-Founder and Chief Architect, Judge.me)
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/duncandavidson/"
-              >Duncan Davidson</a
-            >
-            (Technical Advisor, Office of the CEO, Shopify)
-          </li>
-          <li>
             <a href="https://www.linkedin.com/in/sdavis7766/">Steve Davis</a>
             (President of Product & Technology, Procore)
           </li>
@@ -329,6 +323,12 @@ redirect_from:
               >Ryan Sherlock</a
             >
             (Director of Engineering, Intercom)
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/lastgabs/"
+              >Gabi Stefanini</a
+            >
+            (Director of Engineering, Shopify)
           </li>
           <li>
             <a href="https://www.linkedin.com/in/valdivia-dev/"
