Working on responsive style issues for fullwidth card

--- a/_pages/tutorial.html
+++ b/_pages/tutorial.html
@@ -19,7 +19,7 @@ redirect_from:
   </div>
 </div>
 
-<div class="docs cards common-padding--bottom-small">
+<div class="docs cards common-padding--bottom-small padfix">
   <div class="container">
     <h2 class="thin">Beginner</h2>
 
@@ -88,8 +88,8 @@ redirect_from:
 
             <div class="card__content">
               <p>
-                Allow your users to sign up and edit their profile, and 
-                create admins for your store.
+                Allow your users to sign up and edit their profile, and create
+                admins for your store.
               </p>
             </div>
           </div>
@@ -107,8 +107,8 @@ redirect_from:
 
             <div class="card__content">
               <p>
-                Save products for later, share the list for a birthday or holiday,
-                and more.
+                Save products for later, share the list for a birthday or
+                holiday, and more.
               </p>
             </div>
             <div class="card__label">
@@ -128,9 +128,7 @@ redirect_from:
             </div>
 
             <div class="card__content">
-              <p>
-                Allow people to rate and review the products that you sell.
-              </p>
+              <p>Allow people to rate and review the products that you sell.</p>
             </div>
             <div class="card__label">
               <h6>Coming Soon</h6>
@@ -148,9 +146,10 @@ redirect_from:
       <div class="text__content common-content">
         <h2 class="how">More in the Pipeline</h2>
         <p class="how-leadin">
-          This tutorial series will expand to add more features so you can learn Rails. 
-          Have something you’d like us to cover?
-          <a href="https://app.todohelpers.com/forms/4758b5b0-d6f9-4f41-8041-992cc9b748fb"
+          This tutorial series will expand to add more features so you can learn
+          Rails. Have something you’d like us to cover?
+          <a
+            href="https://app.todohelpers.com/forms/4758b5b0-d6f9-4f41-8041-992cc9b748fb"
             >Let us know.</a
           >
         </p>
