Updating URL to plural (tutorial => tutorials)

--- a/_pages/docs.html
+++ b/_pages/docs.html
@@ -48,7 +48,7 @@ redirect_from:
       </div>
 
       <div class="card">
-        <a href="/docs/tutorial" title="Ruby on Rails Tutorials">
+        <a href="/docs/tutorials" title="Ruby on Rails Tutorials">
           <div class="card__body">
             <div class="card__label">
               <h6>Education</h6>
