--- a/_pages/tutorial.html
+++ b/_pages/tutorial.html
@@ -1,9 +1,9 @@
 ---
 title: "Ruby on Rails Tutorials"
 description: "Ruby on Rails  Tutorials"
-permalink: /docs/tutorial
+permalink: /docs/tutorials
 redirect_from:
-  - /docs/tutorial/
+  - /docs/tutorials/
 ---
 
 <div class="docs heading common-padding--bottom common-padding--top-small">
