--- a/_pages/tutorial.html
+++ b/_pages/tutorial.html
@@ -32,7 +32,7 @@ redirect_from:
     <div class="cards__container card__fullwidth">
       <div class="card">
         <a
-          href="https://guides.rubyonrails.org/install_ruby_on_rails.html"
+          href="https://guides.rubyonrails.org/getting_started.html"
           title="Create a Store with Ruby on Rails"
         >
           <div class="card__body">
@@ -78,7 +78,7 @@ redirect_from:
     <div class="cards__container">
       <div class="card">
         <a
-          href="https://guides.rubyonrails.org/install_ruby_on_rails.html"
+          href="https://guides.rubyonrails.org/sign_up_and_settings.html"
           title="Expand your store with sign up and settings features"
         >
           <div class="card__body">
@@ -147,7 +147,7 @@ redirect_from:
         <h2 class="how">More in the Pipeline</h2>
         <p class="how-leadin">
           This tutorial series will expand to add more features so you can learn
-          Rails. Have something you’d like us to cover?
+          Rails. Have something you’d like us to cover? <br />
           <a
             href="https://app.todohelpers.com/forms/4758b5b0-d6f9-4f41-8041-992cc9b748fb"
             >Let us know.</a
