Update foundation.html with Fullscript logo

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -174,43 +174,32 @@ redirect_from:
               </div>
               <div class="trusted__block">
                  <a href="https://www.chime.com/" aria-label="Chime">
-                  <img
-                    src="/assets/images/logo-chime-bw.svg" alt="Chime" style="padding: 7px 0" />
+                  <img src="/assets/images/logo-chime-bw.svg" alt="Chime" style="padding: 7px 0" />
                 </a>
               </div>
               <div class="trusted__block">
                 <a href="/foundation/clio" aria-label="Clio">
-                  <img
-                    src="/assets/images/logo-clio.svg"
-                    alt="Clio"
-                    style="padding: 3px 0"
-                  />
+                  <img src="/assets/images/logo-clio.svg" alt="Clio" style="padding: 3px 0" />
                 </a>
               </div>
+              <div class="trusted__block">
+                <a href="https://fullscript.com/" aria-label="Fullscript">
+                  <img src="/assets/images/logo-fullscript.svg" alt="Fullscript" />
+                </a>
+              </div>              
               <div class="trusted__block">
                 <a href="/foundation/gusto" aria-label="Gusto">
                   <img src="/assets/images/logo-gusto.svg" alt="Gusto" />
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://www.higherpixels.com/"
-                  aria-label="Higher Pixels"
-                >
-                  <img
-                    src="/assets/images/logo-higherpixels-BW.svg"
-                    alt="Higher Pixels"
-                    style="filter: none"
-                  />
+                <a href="https://www.higherpixels.com/" aria-label="Higher Pixels">
+                  <img src="/assets/images/logo-higherpixels-BW.svg" alt="Higher Pixels" style="filter: none" />
                 </a>
               </div>
               <div class="trusted__block">
                 <a href="/foundation/makandra" aria-label="makandra">
-                  <img
-                    src="/assets/images/logo-makandra-2.svg"
-                    alt="makandra"
-                    style="padding: 8px"
-                    style="filter: none"
-                  />
+                  <img src="/assets/images/logo-makandra-2.svg" alt="makandra" style="padding: 8px" style="filter: none" />
                 </a>
               </div>
               <div class="trusted__block">
