Update Fullscript logo

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -184,7 +184,7 @@ redirect_from:
               </div>
               <div class="trusted__block">
                 <a href="https://fullscript.com/" aria-label="Fullscript">
-                  <img src="/assets/images/logo-fullscript.svg" alt="Fullscript" />
+                  <img src="/assets/images/logo-fullscript-black.svg" alt="Fullscript" style="padding: 18px 0" />
                 </a>
               </div>              
               <div class="trusted__block">
