Fixing fullscript logo padding on members list

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -173,33 +173,56 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                 <a href="https://www.chime.com/" aria-label="Chime">
-                  <img src="/assets/images/logo-chime-bw.svg" alt="Chime" style="padding: 7px 0" />
+                <a href="https://www.chime.com/" aria-label="Chime">
+                  <img
+                    src="/assets/images/logo-chime-bw.svg"
+                    alt="Chime"
+                    style="padding: 7px 0"
+                  />
                 </a>
               </div>
               <div class="trusted__block">
                 <a href="/foundation/clio" aria-label="Clio">
-                  <img src="/assets/images/logo-clio.svg" alt="Clio" style="padding: 3px 0" />
+                  <img
+                    src="/assets/images/logo-clio.svg"
+                    alt="Clio"
+                    style="padding: 3px 0"
+                  />
                 </a>
               </div>
               <div class="trusted__block">
                 <a href="https://fullscript.com/" aria-label="Fullscript">
-                  <img src="/assets/images/logo-fullscript-black.svg" alt="Fullscript" style="padding: 18px 0" />
+                  <img
+                    src="/assets/images/logo-fullscript-black.svg"
+                    alt="Fullscript"
+                  />
                 </a>
-              </div>              
+              </div>
               <div class="trusted__block">
                 <a href="/foundation/gusto" aria-label="Gusto">
                   <img src="/assets/images/logo-gusto.svg" alt="Gusto" />
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://www.higherpixels.com/" aria-label="Higher Pixels">
-                  <img src="/assets/images/logo-higherpixels-BW.svg" alt="Higher Pixels" style="filter: none" />
+                <a
+                  href="https://www.higherpixels.com/"
+                  aria-label="Higher Pixels"
+                >
+                  <img
+                    src="/assets/images/logo-higherpixels-BW.svg"
+                    alt="Higher Pixels"
+                    style="filter: none"
+                  />
                 </a>
               </div>
               <div class="trusted__block">
                 <a href="/foundation/makandra" aria-label="makandra">
-                  <img src="/assets/images/logo-makandra-2.svg" alt="makandra" style="padding: 8px" style="filter: none" />
+                  <img
+                    src="/assets/images/logo-makandra-2.svg"
+                    alt="makandra"
+                    style="padding: 8px"
+                    style="filter: none"
+                  />
                 </a>
               </div>
               <div class="trusted__block">
@@ -314,9 +337,7 @@ redirect_from:
             (Director of Engineering, Intercom)
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/lastgabs/"
-              >Gabi Stefanini</a
-            >
+            <a href="https://www.linkedin.com/in/lastgabs/">Gabi Stefanini</a>
             (Director of Engineering, Shopify)
           </li>
           <li>
