Fullscript member page

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -191,7 +191,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://fullscript.com/" aria-label="Fullscript">
+                <a href="/foundation/fullscript" aria-label="Fullscript">
                   <img
                     src="/assets/images/logo-fullscript-black.svg"
                     alt="Fullscript"
