--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -149,7 +149,7 @@ redirect_from:
           <div class="container">
             <div class="trusted__blocks">
               <div class="trusted__block">
-                <a href="https://www.appsignal.com/" aria-label="AppSignal">
+                <a href="/foundation/appsignal" aria-label="AppSignal">
                   <img
                     src="/assets/images/logo-appsignal.svg"
                     alt="AppSignal"
