--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -89,7 +89,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a href="https://www.fleetio.com" aria-label="Fleetio">
+                <a href="/foundation/fleetio" aria-label="Fleetio">
                   <img src="/assets/images/logo-fleetio.svg" alt="Fleetio" />
                 </a>
               </div>
