Higher Pixels page

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -204,10 +204,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a
-                  href="https://www.higherpixels.com/"
-                  aria-label="Higher Pixels"
-                >
+                <a href="/foundation/higher-pixels" aria-label="Higher Pixels">
                   <img
                     src="/assets/images/logo-higherpixels-BW.svg"
                     alt="Higher Pixels"
