--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -223,10 +223,7 @@ redirect_from:
                 </a>
               </div>
               <div class="trusted__block">
-                <a
-                  href="https://www.planetargon.com/"
-                  aria-label="Planet Argon"
-                >
+                <a href="/foundation/planet-argon" aria-label="Planet Argon">
                   <img
                     src="/assets/images/logo-planetargon.png"
                     alt="Planet Argon"
