--- a/_pages/tutorial.html
+++ b/_pages/tutorial.html
@@ -64,6 +64,7 @@ redirect_from:
       </div>
     </div>
   </div>
+
 </div>
 
 <div class="docs cards common-padding--bottom-small">
@@ -140,7 +141,64 @@ redirect_from:
   </div>
 </div>
 
-<div class="docs text common-padding--bottom">
+<!-- video tutorials -->
+<div class="docs text common-padding--top-small">
+  <div class="container">
+    <div class="text__body">
+      <div class="text__content common-content">
+        <h2 class="how">Video Tutorials</h2>
+            <p class="how-leadin">
+              Build a Task Manager app and learn the fundamentals of Rails through clear, 
+              hands-on video tutorials. Even if you’ve never touched Rails before, you'll 
+              gain the skills to start building your own apps with confidence. 
+              <br>
+              Find all videos in the playlists below.
+            </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="docs cards common-padding--bottom-small">
+  <div class="container">
+    <div class="card__fullwidth">
+        <div class="card__headline">
+          <h2 class="thin">Rails New Playlist (10 videos)</h2>
+        </div>
+        <div class="embed-container">
+          <iframe
+            src="https://www.youtube.com/embed/videoseries?si=htZMcUYKHkwvtbwF&amp;list=PLHFP2OPUpCeZcPutT9yn4-e0bMmrn5Gd1"
+            title="Beginners Guide to Ruby on Rails"
+            aria-label="Beginner Rails Video Series"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            loading="lazy"
+            allowfullscreen>
+          </iframe>
+        </div>
+    </div>
+    <div class="card__fullwidth">
+      <div class="card__headline">
+        <h2 class="thin">Rails 8 Playlist (9 videos)</h2>
+      </div>
+      <div class="embed-container">
+        <iframe
+          src="https://www.youtube.com/embed/videoseries?si=6E_FwCP5YQdt8-MB&amp;list=PLHFP2OPUpCebdA4-xR07SPpoBWVERkHR6"
+          title="Rails 8 Unpacked with Typecraft"
+          aria-label="Advanced Rails Video Series"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          loading="lazy"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+  
+</div>
+
+<div class="docs text common-padding--bottom common-padding--top-small">
   <div class="container">
     <div class="text__body">
       <div class="text__content common-content">
@@ -157,3 +215,5 @@ redirect_from:
     </div>
   </div>
 </div>
+
+<p class="how-"></p>
