--- a/_pages/tutorial.html
+++ b/_pages/tutorial.html
@@ -148,9 +148,8 @@ redirect_from:
       <div class="text__content common-content">
         <h2 class="how">Video Tutorials</h2>
             <p class="how-leadin">
-              Build a Task Manager app and learn the fundamentals of Rails through clear, 
-              hands-on video tutorials. Even if you’ve never touched Rails before, you'll 
-              gain the skills to start building your own apps with confidence. 
+              Build a Task Manager app while learning the fundamentals of Rails through clear, 
+              hands-on video tutorials. 
               <br>
               Find all videos in the playlists below.
             </p>
@@ -163,7 +162,7 @@ redirect_from:
   <div class="container">
     <div class="card__fullwidth">
         <div class="card__headline">
-          <h2 class="thin">Rails New Playlist (10 videos)</h2>
+          <h2 class="thin">Rails New for Beginners - 10 videos</h2>
         </div>
         <div class="embed-container">
           <iframe
@@ -180,7 +179,7 @@ redirect_from:
     </div>
     <div class="card__fullwidth">
       <div class="card__headline">
-        <h2 class="thin">Rails 8 Playlist (9 videos)</h2>
+        <h2 class="thin">Rails 8 Features - 9 videos</h2>
       </div>
       <div class="embed-container">
         <iframe
