Updating GitHub board director
Welcome Whitney, and thank you Neha for your support.

--- a/_pages/foundation.html
+++ b/_pages/foundation.html
@@ -293,10 +293,6 @@ redirect_from:
 
         <ul>
           <li>
-            <a href="https://www.linkedin.com/in/nbatra/">Neha Batra</a> (VP of
-            Engineering, GitHub)
-          </li>
-          <li>
             <a href="https://www.linkedin.com/in/linh-dam-48a55641/"
               >Linh Dam</a
             >
@@ -311,6 +307,10 @@ redirect_from:
               >Rosa Gutiérrez</a
             >
             (Lead Programmer, 37signals)
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/whitneyimura/">Whitney Imura</a> (VP of
+            Engineering, GitHub)
           </li>
           <li>
             <a href="https://www.linkedin.com/in/jason-meller-04498230/"
