tutorial.html: Reduce top padding for video tutorials container by using 'common-padding-top'

--- a/_pages/tutorial.html
+++ b/_pages/tutorial.html
@@ -158,13 +158,13 @@ redirect_from:
   </div>
 </div>
 
-<div class="docs cards common-padding--bottom-small">
-  <div class="container">
-    <div class="card__fullwidth">
+<div class="container common-padding--top-none">
+  <div class="docs card__fullwidth common-padding--top-none">
+    <div class="card__fullwidth common-padding--top-none">
         <div class="card__headline">
-          <h2 class="thin">Rails New for Beginners - 10 videos</h2>
+          <h2 class="thin common-padding--top-none">Rails New for Beginners - 10 videos</h2>
         </div>
-        <div class="embed-container">
+        <div class="embed-container common-padding--top-none">
           <iframe
             src="https://www.youtube.com/embed/videoseries?si=htZMcUYKHkwvtbwF&amp;list=PLHFP2OPUpCeZcPutT9yn4-e0bMmrn5Gd1"
             title="Beginners Guide to Ruby on Rails"
@@ -177,11 +177,11 @@ redirect_from:
           </iframe>
         </div>
     </div>
-    <div class="card__fullwidth">
+    <div class="card__fullwidth common-padding--top-none">
       <div class="card__headline">
         <h2 class="thin">Rails 8 Features - 9 videos</h2>
       </div>
-      <div class="embed-container">
+      <div class="embed-container common-padding--top-none">
         <iframe
           src="https://www.youtube.com/embed/videoseries?si=6E_FwCP5YQdt8-MB&amp;list=PLHFP2OPUpCebdA4-xR07SPpoBWVERkHR6"
           title="Rails 8 Unpacked with Typecraft"
